--- a/src/components/TaskList/TaskList.module.css
+++ b/src/components/TaskList/TaskList.module.css
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 8px;
     border-radius: 8px;
     border: 2px solid green;
     padding: 8px;
